# Client_server_hidden

./: CMakeLists.txt  Makefile  README.md  ReadME.txt  client.c  client_easy_start.bat  config.c  random.c  server.c  server_easy_start.bat  shared.c  shared.h
pin changer/: CMakeLists.txt  Makefile  README.md  README.txt  pin_changer.c  pin_changer_easy_start.bat
src/: addition.c  addition.h  compress_decompress.c  compress_decompress.h  config.c  crypto.c  crypto.h  error.h  lzrw.h  lzrw3-a.c  macros.h  monocypher.c  network.c  network.h  parameters.h  pin.c  pin.h  random.c  random.h  secret.h  txt_reader.c  txt_reader.h
src/client/: client_key.txt  pin.c  pin.h  salt.txt  secret.h
src/include/: addition.h  compress_decompress.h  crypto.h  error.h  lzrw.h  macros.h  monocypher.h  network.h  parameters.h  random.h  txt_reader.h
src/include/client/: pin.h
src/server/: secret.h  server_key.txt
